adding contact section

--- a/index.html
+++ b/index.html
@@ -106,5 +106,37 @@
             <div class="dot"></div>
         </div>
     </div>
+    <div class="contactWrapper">
+        <h1 class="contactTitle">
+            <a>YAMAHA</a> Szkoła Muzyczna
+        </h1>
+        <div class="contactAddres1">
+            <h2><a>Adres 1</a>(Smoczka):</h2><br>
+            <p>ul. Wolności 146A/2<br>
+                39-300 Mielec
+            </p>
+        </div>
+        <div class="contactAddres2">
+            <h2><a>Adres 1</a>(Osiedle):</h2><br>
+            <p>Al. Niepodległości 14/42<br>
+                39-300 Mielec
+            </p>
+        </div>
+        <div class="contactPhone">
+            <h2><a>Telefon</a>:</h2><br>
+            <p>
+                530 740 070
+            </p>
+        </div>
+        <div class="contactEmail">
+            <h2><a>Email</a>:</h2><br>
+            <p>
+                yamahamielec@gmail.com
+            </p>
+        </div>
+        <div class="contactSocials">
+            <h2><a>Odwiedź nas</a>!</h2>
+        </div>    
+    </div>
 </body>
 </html>
