adding icons and remove bg

--- a/index.html
+++ b/index.html
@@ -43,20 +43,86 @@
             W naszej ofercie znajdują się zarówno grupy <a>początkujące</a>, jak i <a>zaawansowane</a>. Dodatkowo możemy wybierać między nauką <a>grupową </a>bądź <a>indywidualną</a>. Każdy znajdzie coś dla siebie!
         </h1>
         <div class="offerBox">
-            <div class="offerBoxIcon"></div>
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/baby1.svg" alt="">
+            </div>
             <div class="offerBoxTitle">
                 <h3>Niemowlaki w krainie dźwięków</h3>
             </div>
             <div class="offerBoxBar"></div>
         </div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
-        <div class="offerBox"></div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/baby2.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Szkraby i muzyka (od 18 m-ca)</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/baby3.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Junior music course (od 4 lat)</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/guitar1.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Gitara klasyczna / elektryczna</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/guitar2.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Gitara basowa</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/piano.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Keyboard</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/drums.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Perkusja</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/ukulele.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Ukulele</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
+        <div class="offerBox">
+            <div class="offerBoxIcon">
+                <img src="./assets/icons/microphone.svg" alt="">
+            </div>
+            <div class="offerBoxTitle">
+                <h3>Wokal</h3>
+            </div>
+            <div class="offerBoxBar"></div>
+        </div>
         <div class="offerMore">
             <h2>Kliknij i przeczytaj więcej o naszych metodach nauczania!</h2>
             <div class="offerButton">
@@ -136,7 +202,14 @@
         </div>
         <div class="contactSocials">
             <h2><a>Odwiedź nas</a>!</h2>
+            <div class="socialsContainer">
+            
+                <div class="social Facebook"></div>
+                <div class="social Instagram"></div>
+                <div class="social Youtube"></div>
+            </div>
         </div>    
     </div>
+    <div class="footer"></div>
 </body>
 </html>
