--- a/index.html
+++ b/index.html
@@ -22,20 +22,24 @@
     </div>
     <div class="counterWrapper">
         <div class="counterBox">
-            <p>123</p>
-            <p>text</p>
+            <div class="counterIcon"></div>
+            <div class="counter" data-target="700000"></div>
+            <h3>Uczniów</h3>
         </div>
         <div class="counterBox">
-            <p>123</p>
-            <p>text</p>
+            <div class="counterIcon"></div>
+            <div class="counter" data-target="5000000"></div>
+            <h3>Absolwentów</h3>
         </div>
         <div class="counterBox">
-            <p>123</p>
-            <p>text</p>
+            <div class="counterIcon"></div>
+            <div class="counter" data-target="20000"></div>
+            <h3>Nauczycieli</h3>
         </div>
         <div class="counterBox">
-            <p>123</p>
-            <p>text</p>
+            <div class="counterIcon"></div>
+            <div class="counter" data-target="6000"></div>
+            <h3>Placówek</h3>
         </div>
     </div>
     <div class="offerWrapper">
@@ -134,7 +138,9 @@
         <h1>Opinie naszych uczniów</h1>
         <div class="reviewContainer">
             <span></span>
-            <div class="arrow"></div>
+            <div class="arrow a1" onclick="reviewMinus()">
+                <img src="./assets/icons/arrow.png" alt="">
+            </div>
             <div class="reviewSection">
                 <div class="reviewContent">
                     <div class="reviewBox">
@@ -147,29 +153,31 @@
                     </div>
                     <div class="reviewBox">
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
-                        <h2>~ Katarzyna</h2>
+                        <h2>~ Marysia</h2>
                     </div>
                     <div class="reviewBox">
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
-                        <h2>~ Katarzyna</h2>
+                        <h2>~ Marysia</h2>
                     </div>
                     <div class="reviewBox">
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
-                        <h2>~ Katarzyna</h2>
+                        <h2>~ Ania</h2>
                     </div>
                     <div class="reviewBox">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quis at maiores. Non nisi doloremque architecto, vero necessitatibus repudiandae ut optio. Velit dignissimos cum culpa similique ea iure, enim suscipit veritatis id rerum officiis voluptates?</p>
-                        <h2>~ Katarzyna</h2>
+                        <h2>~ Ania</h2>
                     </div>
                 </div>
             </div>
-            <div class="arrow"></div>
+            <div class="arrow a2" >
+                <img src="./assets/icons/arrow.png" alt="" onclick="reviewPlus()">
+            </div>
             <span></span>
         </div>
         <div class="reviewDots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+            <div class="dot1 active"></div>
+            <div class="dot2"></div>
+            <div class="dot3"></div>
         </div>
     </div>
     <div class="contactWrapper">
@@ -211,5 +219,6 @@
         </div>    
     </div>
     <div class="footer"></div>
+    <script src="./app.js"> </script>
 </body>
 </html>
