adding arrow up icon and button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </h2>
         <div class="mainWrapperButton"></div>
         <span></span>
+        <div class="goUp">
+            <img src="./assets/icons/arrow2.png" alt="">
+        </div>
     </div>
     <div class="counterWrapper">
         <div class="counterBox">
