adding gallery page and ex photos

--- a/index.html
+++ b/index.html
@@ -12,12 +12,33 @@
 </head>
 <body>
     <div class="mainWrapper">
-        <div class="topBar"></div>
+        <div class="topBar">
+            <div class="logo"></div>
+            <span></span>
+            <span></span>
+            <nav>
+                <input type="checkbox" id="nav" class="hidden" />
+                <label for="nav" class="nav-btn">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </label>
+                <div class="nav-wrapper" id="menu">
+                    <ul>
+                      <li><a href="#">Oferta</a></li>
+                      <li><a href="./gallery.html">Galeria</a></li>
+                      <li><a href="#">Kontakt</a></li>
+                    </ul>
+                  </div>
+            </nav>
+        </div>
+        <span></span>
         <span></span>
         <h1>Najlepsza <a>szkoła<br> muzyczna</a>!</h1>
         <h2>Idź przez życie z własnym rytmem i wspaniałą melodią już od najmłodszych lat! Poznaj nas bliżej i pozwól porwać się muzyce!
         </h2>
         <div class="mainWrapperButton"></div>
+        <span></span>
         <span></span>
         <div class="goUp">
             <img src="./assets/icons/arrow2.png" alt="">
