improving navigation on website

--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,6 @@
             <img src="" alt="" id="selectedImage">
         </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./gallery.js"></script>
 </body>
 </html>
