--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </label>
                 <div class="nav-wrapper" id="menu">
                     <ul>
-                      <li><a href="#">Oferta</a></li>
+                      <li><a href="#" id="button2">Oferta</a></li>
                       <li><a href="./gallery.html">Galeria</a></li>
-                      <li><a href="#">Kontakt</a></li>
+                      <li><a href="#" id="button3">Kontakt</a></li>
                     </ul>
                   </div>
             </nav>
@@ -74,7 +74,7 @@
             <h3>Placówek</h3>
         </div>
     </div>
-    <div class="offerWrapper" id="offer">
+    <div class="offerWrapper">
         <h1 class="offerTitle">
             W naszej ofercie znajdują się zarówno grupy <a>początkujące</a>, jak i <a>zaawansowane</a>. Dodatkowo możemy wybierać między nauką <a>grupową </a>bądź <a>indywidualną</a>. Każdy znajdzie coś dla siebie!
         </h1>
@@ -257,12 +257,22 @@
 
         var button1 = document.querySelector('.mainWrapperButton');
         button1.addEventListener('click', () => {
-            jump('#offer');
+            jump('.offerWrapper');
         });
 
         var button2 = document.querySelector('.goUp');
         button2.addEventListener('click', () => {
             jump('.mainWrapper');
+        });
+
+        var button3 = document.getElementById('button2');
+        button3.addEventListener('click', () => {
+            jump('.offerWrapper');
+        });
+
+        var button4 = document.getElementById('button3');
+        button4.addEventListener('click', () => {
+            jump('.contactWrapper');
         });
     </script>
 </body>
