adding RWD to first 3 wrappers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="mainWrapperButton">
             <span></span>
             <h3>Sprawdź!</h3>
-            <img src="./assets/icons/arrow3.png" alt="">
+            <div class="buttonIcon"></div>
             <span></span>
         </div>
         <span></span>
@@ -78,7 +78,7 @@
         <h1 class="offerTitle">
             W naszej ofercie znajdują się zarówno grupy <a>początkujące</a>, jak i <a>zaawansowane</a>. Dodatkowo możemy wybierać między nauką <a>grupową </a>bądź <a>indywidualną</a>. Każdy znajdzie coś dla siebie!
         </h1>
-        <div class="offerBox">
+        <div class="offerBox ob1">
             <div class="offerBoxIcon">
                 <img src="./assets/icons/baby1.svg" alt="">
             </div>
@@ -87,7 +87,7 @@
             </div>
             <div class="offerBoxBar"></div>
         </div>
-        <div class="offerBox">
+        <div class="offerBox ob2">
             <div class="offerBoxIcon">
                 <img src="./assets/icons/baby2.svg" alt="">
             </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="offerBoxBar"></div>
         </div>
-        <div class="offerBox">
+        <div class="offerBox ob3">
             <div class="offerBoxIcon">
                 <img src="./assets/icons/baby3.svg" alt="">
             </div>
