adding respo to landingpage

--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
                         <h2>~ Marysia</h2>
                     </div>
-                    <div class="reviewBox">
+                    <div class="reviewBox rm">
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
                         <h2>~ Marysia</h2>
                     </div>
-                    <div class="reviewBox">
+                    <div class="reviewBox rm">
                         <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto ut recusandae. Sit optio tenetur sequi nulla illum aliquid eligendi rerum explicabo a, suscipit delectus."</p>
                         <h2>~ Ania</h2>
                     </div>
-                    <div class="reviewBox">
+                    <div class="reviewBox rm">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quis at maiores. Non nisi doloremque architecto, vero necessitatibus repudiandae ut optio. Velit dignissimos cum culpa similique ea iure, enim suscipit veritatis id rerum officiis voluptates?</p>
                         <h2>~ Ania</h2>
                     </div>
