--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,7 @@
         <div id="popup">
             <img src="" alt="" id="selectedImage">
         </div>
+        <div class="footer"></div>
     </div>
     <script src="./gallery.js"></script>
 </body>
