adding respo to gallery

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 <body>
     <div class="mainWrapper">   
         <header>
-            <span></span>
+            <span class="nav-landscape"></span>
             <div class="logo">
                 <img src="./assets/yamaha.png" alt="">
             </div> 
+            <span class="nav-landscape"></span>
             <span></span>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>                  
                 <ul>
-                    <li><a href="#" id="button1">Home</a></li>
-                    <li><a href="#" id="button2">Oferta</a></li>
-                    <li><a href="./gallery.html">Galeria</a></li>
-                    <li><a href="#" id="button3">Kontakt</a></li>
+                    <li><a href="#" id="button2" class="menuButton">Oferta</a></li>
+                    <li><a href="./gallery.html" class="menuButton">Galeria</a></li>
+                    <li><a href="#" id="button3" class="menuButton">Kontakt</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
